# subaccount

./: .gitignore  README.md  README_CN.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  i18n.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: icons.tsx
src/components/ui/: field.tsx  switch.tsx
src/lib/: accountStore.ts  aiPricing.ts  countries.ts  format.ts  subscriptions.ts
src/pages/: AccountsPage.tsx  OverviewDashboard.tsx  SettingsPages.tsx
