[package]
name = "sub-account"
version = "0.2.0"
description = "Local-first subscription manager"
authors = ["SubAccount"]
edition = "2021"

[lib]
name = "sub_account_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
