[package]
name = "jiojio"
version = "0.1.2"
description = "Local-first subscription manager"
authors = ["JioJio"]
edition = "2021"

[lib]
name = "jiojio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
